crates/sol-types/tests/ui/type.stderr
error: empty tuples are not allowed
   --> tests/ui/type.rs:145:9
    |
145 |         () t;
    |         ^^

error: single element tuples must have a trailing comma
   --> tests/ui/type.rs:151:14
    |
151 |         (bool) t;
    |              ^

error: invalid size: number would be zero for non-zero type
   --> tests/ui/type.rs:157:9
    |
157 |         bytes0 a;
    |         ^^^^^^

error: fixed bytes range is 1-32
   --> tests/ui/type.rs:163:9
    |
163 |         bytes33 a;
    |         ^^^^^^^

error: invalid size: number would be zero for non-zero type
   --> tests/ui/type.rs:169:9
    |
169 |         uint0 a;
    |         ^^^^^

error: uintX must be a multiple of 8 up to 256
   --> tests/ui/type.rs:175:9
    |
175 |         uint264 a;
    |         ^^^^^^^

error: uintX must be a multiple of 8 up to 256
   --> tests/ui/type.rs:181:9
    |
181 |         uint7 a;
    |         ^^^^^

error: invalid size: number would be zero for non-zero type
   --> tests/ui/type.rs:187:9
    |
187 |         int0 a;
    |         ^^^^

error: intX must be a multiple of 8 up to 256
   --> tests/ui/type.rs:193:9
    |
193 |         int264 a;
    |         ^^^^^^

error: intX must be a multiple of 8 up to 256
   --> tests/ui/type.rs:199:9
    |
199 |         int7 a;
    |         ^^^^

error: enum has too many variants
   --> tests/ui/type.rs:476:10
    |
476 |     enum TooBigEnum {
    |          ^^^^^^^^^^

error: Mapping types are not supported here
   --> tests/ui/type.rs:739:9
    |
739 |         mapping(mapping(a b => c d) e => mapping(f g => h i) j) map;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Mapping types are not supported here
   --> tests/ui/type.rs:748:13
    |
748 |     mapping(mapping(int => int) => int) public mapKeyOfMap;
    |             ^^^^^^^^^^^^^^^^^^^

error: Mapping types are not supported here
   --> tests/ui/type.rs:752:23
    |
752 |     function mappings(mapping(uint256 a => bool b), mapping(bool => bool) x);
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Mapping types are not supported here
   --> tests/ui/type.rs:752:53
    |
752 |     function mappings(mapping(uint256 a => bool b), mapping(bool => bool) x);
    |                                                     ^^^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `bytes_` in this scope
   --> tests/ui/type.rs:205:9
    |
205 |         bytes_ a;
    |         ^^^^^^ not found in this scope

error[E0412]: cannot find type `bytes_32` in this scope
   --> tests/ui/type.rs:206:9
    |
206 |         bytes_32 b;
    |         ^^^^^^^^ not found in this scope

error[E0412]: cannot find type `uint_` in this scope
   --> tests/ui/type.rs:207:9
    |
207 |         uint_ c;
    |         ^^^^^ not found in this scope

error[E0412]: cannot find type `uint_256` in this scope
   --> tests/ui/type.rs:208:9
    |
208 |         uint_256 d;
    |         ^^^^^^^^ not found in this scope

error[E0412]: cannot find type `int_` in this scope
   --> tests/ui/type.rs:209:9
    |
209 |         int_ e;
    |         ^^^^ not found in this scope

error[E0412]: cannot find type `int_256` in this scope
   --> tests/ui/type.rs:210:9
    |
210 |         int_256 f;
    |         ^^^^^^^ not found in this scope

error[E0412]: cannot find type `a` in this scope
   --> tests/ui/type.rs:739:25
    |
739 |         mapping(mapping(a b => c d) e => mapping(f g => h i) j) map;
    |                         ^ not found in this scope
